--- a/index.html
+++ b/index.html
@@ -364,8 +364,8 @@
 
     <hr class="mt-3">
     <div class="container">
-        <div class="col-12 col-md-7">
-            <div class="d-flex flex-row-reverse justify-content-center justify-content-md-start">
+        <div >
+            <div class="d-flex flex-row-reverse  justify-content-start">
                 <form class="ml-3 d-inline-block">
                     <select class="form-select form-select-sm">
                         <option> Ordenar pelo maior preço</option>
