correção no ordenamento
Corrigido a ordenação para aparecer somente os produtos que faz parte da categoria escolhida

--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
                 <!-- Barra de pordenação -->
                 <div class="col-12 col-md-7">
                     <div class="d-flex flex-row-reverse justify-content-center justify-content-md-start">
-                        <form class="ml-3 d-inline-block">
+                        <form class="ml-3 d-inline-block ">
                             <select id="sort-options" class="form-select form-select-sm">
-                                <option value="default">Ordenar por...</option>
+                                <option value="default">Todos os produtos</option>
                                 <option value="price-desc">Maior preço</option>
                                 <option value="price-asc">Menor preço</option>
                                 <option value="category-alimentos">Alimentos</option>
@@ -117,7 +117,7 @@
                                 <option value="category-higiene">Higiene</option>
                             </select>
                         </form>
-
+                        <div style="width: 5px;"></div>
                         <!-- Páginas 1 a 5 -->
                         <nav class="d-inline-block">
                             <ul class="pagination pagination-sm my-0">
