--- a/paginas/bebidas/bebidas.html
+++ b/paginas/bebidas/bebidas.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap 5 - Versão Estável -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="../../CSS/style.css">
 
 </head>
 <body>
@@ -179,7 +179,7 @@
                         <img src="img/arroz_panelaco_parbolizado_233.jpg" class="card-img-top d-none d-md-block" alt="Imagem Grande">
                         <img src="img/arroz_panelaco_parbolizado_191.25.jpg" class="d-block d-md-none" alt="Imagem Pequena">
                         <div class="card-body">
-                            <h5 class="card-title"> Coca-Cola - Zero</h5>
+                            <h5 class="card-title"> Coca-Cola - Original</h5>
                             <p class="card-text truncate-4l">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                         </div>
                         <div class="card-footer">
@@ -304,6 +304,6 @@
 
     <!-- Bootstrap 5 JS (versão estável) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="../../js/script.js"></script>
 </body>
 </html>
