--- a/index.html
+++ b/index.html
@@ -117,25 +117,11 @@
                         </form>
                         <div style="width: 5px;"></div>
                         <!-- Páginas 1 a 5 -->
-                        <nav class="d-inline-block">
-                            <ul class="pagination pagination-sm my-0">
-                                <li class="page-item disabled">
-                                    <button class="page-link">1</button>
-                                </li>
-                                <li class="page-item">
-                                    <button class="page-link">2</button>
-                                </li>
-                                <li class="page-item">
-                                    <button class="page-link">3</button>
-                                </li>
-                                <li class="page-item">
-                                    <button class="page-link">4</button>
-                                </li>
-                                <li class="page-item">
-                                    <button class="page-link">5</button>
-                                </li>
-                            </ul>
-                        </nav>
+                        <div class="col-12 col-md-5">
+                            <div class="flex-row-reverse justify-content-md-start d-flex">
+                                <div id="pagination-controls" class=" justify-content-center "></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -189,35 +175,7 @@
         </div>
 
         <hr class="mt-3">
-        <div class="container">
-            <!-- Barra de ordenação -->
-            <div class="col-12">
-            <div class="d-flex flex-row-reverse justify-content-center justify-content-md-start">
-                <div style="width: 5px;"></div>
-                <!-- Páginas 1 a 5 -->
-                <nav class="d-inline-block">
-                    <ul class="pagination pagination-sm my-0">
-                        <li class="page-item disabled">
-                            <button class="page-link">1</button>
-                        </li>
-                        <li class="page-item">
-                            <button class="page-link">2</button>
-                        </li>
-                        <li class="page-item">
-                            <button class="page-link">3</button>
-                        </li>
-                        <li class="page-item">
-                            <button class="page-link">4</button>
-                        </li>
-                        <li class="page-item">
-                            <button class="page-link">5</button>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-            </div>
-        </div>
-        <hr class="mt-3">
+        
     </main>
 
     <footer class="text-muted bg-light">
@@ -239,65 +197,7 @@
 
     <!-- Bootstrap JS e Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/produtos.js"></script>
-    <script>
-    // Função para exibir os produtos
-    function displayProducts(products) {
-        const productList = document.getElementById('product-list');
-        productList.innerHTML = ''; // Limpa qualquer conteúdo existente
-
-        products.forEach(product => {
-            const productDiv = document.createElement('div');
-            productDiv.className = 'col-xl-2 col-lg-3 col-md-4 col-6 product py-2 ';
-            productDiv.innerHTML = `
-                <div class="card text-center bg-light" style="max-width: 250px; width: 100%;">
-                    <img src="${product.image}" class="card-img-top" alt="${product.name}">
-                    <div class="card-body">
-                        <h5 class="card-title">${product.name}</h5>
-                        <p class="card-text truncate-4l">${product.description}</p>
-                    </div>
-                    <div class="card-footer">
-                        <p class="card-text"><strong>R$ ${product.valor}</strong></p>
-                    </div>
-                </div>
-            `;
-            productList.appendChild(productDiv);
-        });
-    }
-
-    // Exibe todos os produtos inicialmente
-    displayProducts(allProducts);
-
-    // Função de pesquisa
-    document.getElementById('search-input').addEventListener('input', function () {
-        const searchTerm = this.value.toLowerCase();
-
-        // Filtra os produtos com base no termo de pesquisa
-        const filteredProducts = allProducts.filter(product =>
-            product.name.toLowerCase().includes(searchTerm) ||
-            product.description.toLowerCase().includes(searchTerm)
-        );
-
-        // Atualiza a lista de produtos filtrados
-        displayProducts(filteredProducts);
-    });
-
-    // Função para filtrar e ordenar produtos
-    document.getElementById('sort-options').addEventListener('change', function () {
-        let selectedOption = this.value;
-        let filteredProducts = [...allProducts]; // Copia a lista original
-
-        if (selectedOption === "price-asc") {
-            filteredProducts.sort((a, b) => a.price - b.price);
-        } else if (selectedOption === "price-desc") {
-            filteredProducts.sort((a, b) => b.price - a.price);
-        } else if (selectedOption.startsWith("category-")) {
-            let category = selectedOption.replace("category-", "");
-            filteredProducts = allProducts.filter(product => product.category === category);
-        }
-
-        displayProducts(filteredProducts); // Atualiza a exibição
-    });
-    </script>
+    <script src="js/produtosGeral.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
