--- a/higiene.html
+++ b/higiene.html
@@ -27,12 +27,12 @@
 
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="#">HOME</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">HOME</a></li>
                     <li class="nav-item"><a class="nav-link" href="produtosGeral.html">PRODUTOS EM GERAL</a></li>
                     <li class="nav-item"><a class="nav-link" href="alimentos.html">ALIMENTOS</a></li>
                     <li class="nav-item"><a class="nav-link" href="bebidas.html">BEBIDAS</a></li>
                     <li class="nav-item"><a class="nav-link" href="carne.html">CARNE</a></li>
-                    <li class="nav-item"><a class="nav-link" href="higiene.html">HIGIENE</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">HIGIENE</a></li>
                 </ul>
             </div>
         </div>
@@ -107,13 +107,9 @@
                     <div class="d-flex flex-column flex-row-reverse justify-content-center justify-content-md-start">
                         <form class="ml-3 d-inline-block">
                             <select id="sort-options" class="form-select form-select-sm">
-                                <option value="default">Todos os produtos</option>
+                                <option value="default">Higiene</option>
                                 <option value="price-desc">Maior preço</option>
                                 <option value="price-asc">Menor preço</option>
-                                <option value="category-alimentos">Alimentos</option>
-                                <option value="category-bebidas">Bebidas</option>
-                                <option value="category-carne">Carne</option>
-                                <option value="category-higiene">Higiene</option>
                             </select>
                         </form>
                         <div style="width: 5px;"></div>
@@ -131,7 +127,7 @@
         <hr class="mt-3">
 
         <div class="container">
-            <h3 class="texto-separador">HOME</h3>
+            <h3 class="texto-separador">Higiene</h3>
             <!-- Lista de Produtos -->
                 <div id="product-list" class="row"></div>
             </div>
@@ -198,6 +194,7 @@
 
     <!-- Bootstrap JS e Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    
+    <script src="js/higiene.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
