--- a/produtosGeral.html
+++ b/produtosGeral.html
@@ -27,8 +27,8 @@
 
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="#">HOME</a></li>
-                    <li class="nav-item"><a class="nav-link" href="produtosGeral.html">PRODUTOS EM GERAL</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">HOME</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">PRODUTOS EM GERAL</a></li>
                     <li class="nav-item"><a class="nav-link" href="alimentos.html">ALIMENTOS</a></li>
                     <li class="nav-item"><a class="nav-link" href="bebidas.html">BEBIDAS</a></li>
                     <li class="nav-item"><a class="nav-link" href="carne.html">CARNE</a></li>
@@ -131,7 +131,7 @@
         <hr class="mt-3">
 
         <div class="container">
-            <h3 class="texto-separador">HOME</h3>
+            <h3 class="texto-separador">Produtos em geral</h3>
             <!-- Lista de Produtos -->
                 <div id="product-list" class="row"></div>
             </div>
@@ -198,6 +198,7 @@
 
     <!-- Bootstrap JS e Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    
+    <script src="js/listaProdutos.js"></script><!--Lista de com todos os produtos-->
+    <script src="js/script.js"></script>
 </body>
 </html>
