--- a/carne.html
+++ b/carne.html
@@ -27,8 +27,7 @@
 
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="index.html">HOME</a></li>
-                    <li class="nav-item"><a class="nav-link" href="produtosGeral.html">PRODUTOS EM GERAL</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">PRODUTOS EM GERAL</a></li>
                     <li class="nav-item"><a class="nav-link" href="alimentos.html">ALIMENTOS</a></li>
                     <li class="nav-item"><a class="nav-link" href="bebidas.html">BEBIDAS</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">CARNE</a></li>
